--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # pip install -r requirements.txt
 
 # Base ----------------------------------------
-matplotlib==3.3.0
+matplotlib >=3.3.0
 numpy>=1.22.2
 opencv-python>=4.5.4
 Pillow>=7.1.2
